# CDHAI_June

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: default.yaml
docs/database/: server_database_audit_report.md
examples/: sample_patient.csv
scripts/: build_a_user_store_composite.py  remote_database_audit.py  run_patient_analysis.ps1  run_patient_analysis.sh  server_database_audit.py  setup_foundations.ps1  setup_foundations.sh  setup_haipipe_toolkit.ps1  setup_haipipe_toolkit.sh  welldoc_space_manifest_audit.py
specs/hapf-cycle-integration/: plan.md  spec.md  tasks.md  verification.md
specs/patient-analysis-agent/: plan.md  spec.md  tasks.md  verification.md
src/cdhai_june/: __init__.py  __main__.py  cli.py  config.py  data_loader.py  knowledge_base.py  llm.py  models.py  pipeline.py  prompts.py  reporting.py  research.py  task_cycle.py  utils.py
src/cdhai_june/analysis/: __init__.py  basic.py  cgm.py  events.py  hypotheses.py  ml.py
tests/: test_basic_analysis.py  test_ci_contract.py  test_database_audit_scripts.py  test_foundational_dependencies.py  test_haipipe_toolkit_status.py  test_hapf_integration.py  test_pipeline_dry_run.py  test_research_context.py  test_task_cycle.py
