[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdhai-june"
version = "0.1.0"
description = "Single-patient data analysis agent with deterministic probes and iterative LLM reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "matplotlib>=3.8",
  "numpy>=1.25",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]
haipipe-toolkit = [
  "haipipe @ git+https://github.com/JHU-CDHAI/WellDoc-SPACE.git",
]
codex-oauth = [
  "codex-oauth @ git+https://github.com/zeron-G/codex_oauth.git",
]
hapf = [
  "cdhai-hapf @ git+https://github.com/zeron-G/CDHAI-HAPF.git",
]
foundations = [
  "haipipe @ git+https://github.com/JHU-CDHAI/WellDoc-SPACE.git",
  "codex-oauth @ git+https://github.com/zeron-G/codex_oauth.git",
]

[project.scripts]
cdhai-june = "cdhai_june.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
